--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -108,6 +108,8 @@ flutter:
     - asset/groop2.png
     - asset/groop3.png
     - asset/welcom.png
+    - asset/notif_aa.png
+    - asset/home_ban.png
 
 
 
