--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,13 +58,9 @@ dependencies:
   flutter_slidable: 3.0.0
   collection: 1.19.0
   shared_preferences: 2.5.3
-#  html_unescape: 2.0.0
   percent_indicator: 4.2.2
-#  youtube_player_flutter: 9.1.1
-#  no_screenshot: 0.3.1
-#  flutter_widget_from_html: 0.16.0
-#  flutter_inappwebview: 6.1.5
   flutter_secure_storage: ^9.2.4
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
@@ -126,6 +122,9 @@ flutter:
     - asset/dsr_1.png
     - asset/dsr_2.png
     - asset/add_back.png
+    - asset/search.png
+    - asset/globus.png
+    - asset/micro.png
 
 
 
